# flexicam

./: README.md
code/hardware/arduinoController/: arduinoController.ino  arduinoController.ino~
code/hardware/test/: motor_commander.py  motor_commander.py~  readSerial.py
code/matlab demo/inv jacobian/: drawArm.m  inverseJacobian.m
code/software/flexicam/.kdev4/: make-it-roll 2.kdev4
code/software/flexicam/app/scripts/: app.xml  system.xml
code/software/flexicam/src/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  main.cpp  writeThread.h~
